<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="16dp">

    <Button
        android:id="@+id/btnCreateExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_exam"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnEditExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_exam"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnViewExams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_exams"/>

</LinearLayout>
