<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:id="@+id/radioGroupAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/radioButtonAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
        android:minHeight="48dp"
        android:text="@string/answer1"
        android:paddingLeft="16dp"

        android:paddingRight="16dp"
        android:gravity="center_vertical"/>

        <RadioButton
            android:id="@+id/radioButtonAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:text="@string/answer2"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"/>
    </RadioGroup>


    <Button
        android:id="@+id/btnSubmitAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"/>
</LinearLayout>

